samples/_failures_safe/1761557243_e908b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8f6896f.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_f8f6896f.c:169:13: error: expected expression at end of input
  169 |             start =
      |             ^~~~~
./samples/SAFE/__tmp_f8f6896f.c:169:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f8f6896f.c:169:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f8f6896f.c:169:13: error: expected declaration or statement at end of input
